--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="codemirror/mode/markdown/markdown.js"></script>
     <script src="codemirror/addon/edit/closebrackets.js"></script>
     <script src="codemirror/addon/edit/continuelist.js"></script>
+    <link rel="shortcut icon" href="resources/favicon.png" type="image/x-icon">
 </head>
 
 <body>
