--- a/read.html
+++ b/read.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/palette.css">
     <link rel="stylesheet" href="style/share.css">
     <link rel="stylesheet" href="style/editor.css">
+    <link rel="shortcut icon" href="resources/favicon.png" type="image/x-icon">
 </head>
 
 <body>
