--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div class="header-center hide-on-mobile">
+        <div class="header-center hide-on-tablet">
             <p id="filename">titulo</p>
         </div>
         <div class="header-right">
@@ -74,8 +74,11 @@
     </header>
 
     <div id="files" class="sidebar"></div>
-    <textarea id="editor"></textarea>
-    <div id="preview" class="preview"></div>
+
+    <div class="main-wrapper">
+        <textarea id="editor"></textarea>
+        <div id="preview" class="preview"></div>
+    </div>
 
     <script src="script/showdown.js"></script>
     <script src="script/edittools.js"></script>
