added youtube video viewer, added light theme

--- a/read.html
+++ b/read.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="resources/favicon.png" type="image/x-icon">
 </head>
 
-<body>
+<body class="theme-dark">
     <header class="window-title">
         <div class="header-left">
             <button class="icon-button" translate="no" onclick="window.close()" title="Go back">
