--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="resources/favicon.png" type="image/x-icon">
 </head>
 
-<body>
+<body class="theme-dark">
     <header class="window-title">
         <div class="header-left">
             <button class="icon-button" translate="no" onclick="toggleSidebar('files-bar')" title="Documents">
@@ -35,7 +35,7 @@
                     <button class="text-button" onclick="insertBlock(getSummary(editor.getValue())); hideAllMenus()">Summary</button>
                     <button class="text-button" onclick="promptTableSelector().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Table</button>
                     <hr>
-                    <button class="text-button" onclick="">YouTube Iframe</button>
+                    <button class="text-button" onclick="promptIframe().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Web embed</button>
                 </div>
             </div>
         </div>
@@ -64,7 +64,7 @@
                     <button class="text-button">Keyboard shortcuts <kbd>Ctrl+?</kbd></button>
                     <button class="text-button" onclick="promptMessageFromFile('about.html'); hideAllMenus();">About Cohesion <kbd>F1</kbd></button>
                     <hr>
-                    <button class="text-button" onclick="deleteEmptyFiles(); hideAllMenus()">Delete empty files</button>
+                    <button class="text-button" onclick="deleteEmptyFiles(); hideAllMenus()">Clear empty files</button>
                 </div>
             </div>
         </div>
@@ -82,6 +82,7 @@
 
     <script src="script/showdown.js"></script>
     <script src="script/edittools.js"></script>
+    <script src="script/insert.js"></script>
     <script src="script/menus.js"></script>
     <script src="script/file.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lz-string@1.4.4/libs/lz-string.min.js"></script>
