--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
                     attach_filearrow_drop_down
                 </button>
                 <div class="dropdown-content menu align-left" id="insert-menu">
-                    <button class="text-button" onclick="insertBlock(getSummary(editor.getValue())); hideAllMenus()">Summary</button>
-                    <button class="text-button" onclick="promptTableSelector().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Table</button>
+                    <button class="text-button"
+                        onclick="insertBlock(getSummary(editor.getValue())); hideAllMenus()">Summary</button>
+                    <button class="text-button"
+                        onclick="promptTableSelector().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Table</button>
                     <hr>
-                    <button class="text-button" onclick="promptIframe().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Web embed</button>
+                    <button class="text-button"
+                        onclick="promptIframe().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Web
+                        embed</button>
                 </div>
             </div>
         </div>
@@ -56,13 +60,18 @@
                 <div class="dropdown-content menu" id="more-menu">
                     <button class="text-button" onclick="createFile(); hideAllMenus()">New <kbd>Ctrl+N</kbd></button>
                     <button class="text-button" onclick="importFile(); hideAllMenus()">Open <kbd>Ctrl+O</kbd></button>
-                    <button class="text-button" onclick="exportFile(index); hideAllMenus()">Save <kbd>Ctrl+S</kbd></button>
+                    <button class="text-button" onclick="exportFile(index); hideAllMenus()">Save
+                        <kbd>Ctrl+S</kbd></button>
                     <hr>
-                    <button class="text-button">Settings <kbd>Ctrl+,</kbd></button>
+                    <button class="text-button"
+                        onclick="promptMessageFromFile('settings.html'); hideAllMenus()">Settings
+                        <kbd>Ctrl+,</kbd></button>
                     <hr>
-                    <button class="text-button" onclick="window.open('read.html?path=tutorial.md'); hideAllMenus()">Tutorial</button>
+                    <button class="text-button"
+                        onclick="window.open('read.html?path=tutorial.md'); hideAllMenus()">Tutorial</button>
                     <button class="text-button">Keyboard shortcuts <kbd>Ctrl+?</kbd></button>
-                    <button class="text-button" onclick="promptMessageFromFile('about.html'); hideAllMenus();">About Cohesion <kbd>F1</kbd></button>
+                    <button class="text-button" onclick="promptMessageFromFile('about.html'); hideAllMenus();">About
+                        Cohesion <kbd>F1</kbd></button>
                     <hr>
                     <button class="text-button" onclick="deleteEmptyFiles(); hideAllMenus()">Clear empty files</button>
                 </div>
@@ -71,7 +80,8 @@
     </header>
 
     <div id="files-bar" class="sidebar">
-        <button class="text-button hide-on-pc" style="width: 100%; margin-top: 20px; margin-bottom: 20px;" onclick="createFile();">Create new document</button>
+        <button class="text-button hide-on-pc" style="width: 100%; margin-top: 20px; margin-bottom: 20px;"
+            onclick="createFile();">Create new document</button>
         <div id="files"></div>
     </div>
 
@@ -85,6 +95,7 @@
     <script src="script/insert.js"></script>
     <script src="script/menus.js"></script>
     <script src="script/file.js"></script>
+    <script src="script/settings.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lz-string@1.4.4/libs/lz-string.min.js"></script>
     <script>
         loadFilesFromStorage();
@@ -116,6 +127,9 @@
         renderEditor();
         renderFiles("files");
         editor.focus();
+        document.addEventListener('DOMContentLoaded', () => {
+            loadSettings();
+        });
 
         editor.on("change", instance => {
             updateFile(instance.getValue(), index);
@@ -203,6 +217,29 @@
             }).join('\n');
         }
 
+        function loadSettings() {
+            const theme = getSetting('theme');
+            if (theme) document.body.className = theme;
+
+            const root = document.documentElement;
+
+            const editorFont = getSetting('editorFont');
+            const paragraphFont = getSetting('paragraphFont');
+            const titleFont = getSetting('titleFont');
+
+            if (editorFont) {
+                root.style.setProperty('--font-editor', editorFont);
+            }
+
+            if (paragraphFont) {
+                root.style.setProperty('--font-text', paragraphFont);
+            }
+
+            if (titleFont) {
+                root.style.setProperty('--font-title', titleFont);
+            }
+        }
+
         document.addEventListener("keydown", async function (event) {
             // NAVIGATION
             if (event.ctrlKey && event.key === "p") { // toggle preview - ctrl+p
@@ -218,6 +255,11 @@
             else if (event.key === "F9") { // toggle sidepane - f9
                 event.preventDefault();
                 toggleSidebar('files-bar');
+            }
+
+            else if (event.ctrlKey && event.key === ',') {
+                promptMessageFromFile('settings.html');
+                hideAllMenus();
             }
 
             // FILE
@@ -238,7 +280,7 @@
 
             else if (event.ctrlKey && event.key === "Delete") { // delete - ctrl+delete
                 event.preventDefault();
-                if(! await promptConfirm("Delete this document?")) return;
+                if (! await promptConfirm("Delete this document?")) return;
 
                 deleteFile(index);
                 saveFilesToStorage();
