--- a/about.html
+++ b/about.html
@@ -14,6 +14,12 @@
         <hr>
         <a href="https://github.com/flarom/cohesion" target="_blank">Repository</a> | 
         <a onclick="promptMessage(`
+                        <ul>
+                            <li><a target='_blank' href='https://codemirror.net/'>CodeMirror</a></li>
+                            <li><a target='_blank' href='https://showdownjs.com/'>Showdown</a></li>
+                        </ul>
+                    `)" style="cursor: pointer;">Used libraries</a> |
+        <a onclick="promptMessage(`
                         <p>Copyright (C) 2025, F. Bergamin.</p>
                         <p>This application comes with absolutely no warranty. See the <a href='https://www.gnu.org/licenses/gpl-3.0.html' target='_blank'>GNU General Public License, version 3 or later</a> for more details.</p>
                     `)" style="cursor: pointer;">License</a>
