--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <body class="theme-dark">
     <header class="window-title">
         <div class="header-left">
-            <button class="icon-button" translate="no" onclick="toggleSidebar('files-bar')" ondragenter="toggleSidebar('files-bar')" title="Documents">
+            <button class="icon-button" translate="no" onclick="toggleSidebar('files-bar')"
+                ondragenter="toggleSidebar('files-bar')" title="Documents">
                 side_navigation
             </button>
             <button class="icon-button hide-on-mobile" translate="no" title="New file" onclick="createFile();">
@@ -262,8 +263,17 @@
                 hideAllMenus();
             }
 
+            else if (event.altKey && /^[0-9]$/.test(event.key)) {
+                event.preventDefault();
+                const newIndex = (event.key === "0") ? 9 : parseInt(event.key) - 1;
+                if (newIndex > files.length -1) return;
+                index = newIndex;
+                renderEditor();
+                editor.focus();
+            }
+
             // FILE
-            else if (event.ctrlKey && event.key === "n") { // new - ctrl+n
+            else if (event.altKey && event.key === "n") { // new - ctrl+n
                 event.preventDefault();
                 createFile();
             }
