--- a/settings.html
+++ b/settings.html
@@ -24,6 +24,7 @@
         <button class="ball" style="background-color: #ffffff;" onclick="setSetting('theme', 'theme-light');loadSettings()"></button>
         <button class="ball" style="background-color: #f5eacb;" onclick="setSetting('theme', 'theme-cream');loadSettings()"></button>
         <button class="ball" style="background-color: #303030;" onclick="setSetting('theme', 'theme-dark');loadSettings()"></button>
+        <button class="ball" style="background-color: #1c1a17;" onclick="setSetting('theme', 'theme-cream-dark');loadSettings()"></button>
     </div>
 
     <h3>Fonts</h3>
