added more meta

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <meta content="https://flarom.github.io/cohesion" property="og:url">
     <meta content="index, follow" name="robots">
 
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta content="#303030" name="theme-color">
-
+    <link rel="manifest" href="/manifest.json">
+    
     <link rel="stylesheet" href="style/palette.css">
     <link rel="stylesheet" href="style/share.css">
     <link rel="stylesheet" href="style/editor.css">
